@@ -1,7 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.3
 Date: ????
+
   Changes:
+    - Keep entity selection box in the settings menu for invalid entries. This lets you fix broken sets more easily.
+
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.2
 Date: 2022-06-30
